@@ -85,12 +85,6 @@ catch (e)
  }
 return xmlHttp;
 }
-function funcion2()
-{
-
-alert("hola");
-
-}
 
 //-->
 </script>
